# colorchecker

./: .coveragerc  .gitattributes  .pre-commit-config.yaml  CHANGELOG.MD  CONTRIBUTING.md  LICENSE  LICENSE_COMPLIANCE.md  README.rst  TODO.rst  lint_report.txt  new_tests_output.txt  pyproject.toml  pyright_errors.txt  pyright_output.txt  pyright_report.txt  pyright_report_final.txt  requirements.txt  tasks.py  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-request.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  continuous-integration-documentation.yml  continuous-integration-quality-unit-tests.yml
colour_checker_detection/: __init__.py  calibrator.py  correction_swatches.py  correction_swatches_benchmark.py  correction_template.py  detection_swatches.py  detector.py  io.py  test.py  utils_geom.py
colour_checker_detection/detection/: __init__.py  common.py  inference.py  plotting.py  segmentation.py  templated.py
colour_checker_detection/detection/templates/: __init__.py  generate_template.py  template_colorchecker_classic.npz  template_colorchecker_classic.py  template_colorchecker_creative_enhancement.npz  template_colorchecker_creative_enhancement.py
colour_checker_detection/detection/templates/tests/: __init__.py  test_templates.py
colour_checker_detection/detection/tests/: _test_inference.py.disabled  _test_segmentation.py.disabled  test_common.py  test_inference.py  test_segmentation.py  test_templated.py
colour_checker_detection/examples/: examples_detection_inference.ipynb
colour_checker_detection/knowledge/: knowledge.md
colour_checker_detection/local_test/: DSC05274.ARW
colour_checker_detection/scripts/: inference.py
colour_checker_detection/test_results/20251230_215036/: correction_Templated_Colorchecker.json  correction_Templated_DSC05274.json  correction_Templated_color_checker_1.json
colour_checker_detection/test_results/20251231_202955/: correction_Templated_Colorchecker.json  correction_Templated_DSC05274.json  correction_Templated_color_checker_1.json
colour_checker_detection/test_results/20260104_182458/: correction_Templated_Colorchecker.cube  correction_Templated_Colorchecker.dcp  correction_Templated_Colorchecker.json  correction_Templated_Colorchecker.xml  correction_Templated_Colorchecker_ccm.txt  correction_Templated_DSC05274.cube  correction_Templated_DSC05274.dcp  correction_Templated_DSC05274.json  correction_Templated_DSC05274.xml  correction_Templated_DSC05274_ccm.txt  correction_Templated_color_checker_1.cube  correction_Templated_color_checker_1.dcp  correction_Templated_color_checker_1.json  correction_Templated_color_checker_1.xml  correction_Templated_color_checker_1_ccm.txt
colour_checker_detection/tests/: test_calibrator.py  test_correction_swatches.py  test_correction_swatches_benchmark.py  test_correction_template.py  test_detection_swatches.py  test_detector.py  test_io.py  test_test_script.py
colour_checker_detection/utilities/: __init__.py  requirements.py
docs/: ARCHITECTURE.md  colour_checker_detection.detection.rst  colour_checker_detection.rst  colour_checker_detection.utilities.rst  conf.py  index.rst  installation.rst  requirements.txt
utilities/: export_todo.py  unicode_to_ascii.py
