[project]
name = "colorchecker-pipeline"
version = "0.2.3"
description = "Pipeline de detección y corrección de color para fotogrametría (Derivado de colour-checker-detection)"
readme = "README.rst"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "Laboratorio de Arqueología Digital UC", email = "victor.mendez@uc.cl" },
]
maintainers = [
    { name = "Laboratorio de Arqueología Digital UC" }
]
license = { text = "APACHE-2.0" }
keywords = [
    "colour-science",
    "color-checker",
    "colour-checker",
    "python"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
dependencies = [
    "colour-science>=0.4.5",
    "openimageio>=3,<4",
    "numpy>=2.0.0,<3",
    "opencv-python>=4,<5",
    "scipy>=1.13.0,<2",
    "typing-extensions>=4,<5",
    "matplotlib>=3.10.8",
    "rawpy>=0.25.1",
    "scikit-learn>=1.8.0",
    "psutil>=7.2.0",
    "pre-commit>=4.5.1",
    "pip-licenses>=5.5.0",
    "yamllint>=1.37.1",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
optional = [
    "imageio>=2,<3",
    "matplotlib>=3.9",
]
docs = [
    "biblib-simple",
    "pydata-sphinx-theme",
    "restructuredtext-lint",
    "sphinx",
    "sphinxcontrib-bibtex",
]
ultralytics = [
    "click>=8,<9; python_version<'3.14'",
    "ultralytics>=8,<9; python_version<'3.14'",
]
sklearn = [
    "scikit-learn>=1.7,<2",
]

[project.urls]
Homepage = ""
Documentation = ""
Repository = "https://github.com/Laboratorio-de-Arqueologia-Digital-UC/colorchecker"
Issues = ""
Changelog = ""

[tool.uv]
package = true

[tool.uv.sources]
colorchecker-pipeline = { workspace = true }

[dependency-groups]
dev = [
    "colorchecker-pipeline",
    "commitizen>=4.11.0",
    "coverage",
    "coveralls",
    "hatch",
    "invoke",
    "jupyter",
    "prek",
    "pyright",
    "pytest",
    "pytest-cov<7.0.0",
    "pytest-xdist",
    "scipy-stubs",
    "ruff",
    "toml",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "colour_checker_detection" ]

[tool.hatch.build.targets.sdist]
exclude = [
    "colour_checker_detection/resources/colour-checker-detection-examples-datasets/detection/*",
    "colour_checker_detection/resources/colour-checker-detection-tests-datasets/colour_checker_detection/detection/*",
]

[project.scripts]
colour-checker-detection-inference = "colour_checker_detection.scripts.inference:segmentation"

[tool.codespell]
ignore-words-list = "socio-economic"
skip = "BIBLIOGRAPHY.bib,CONTRIBUTORS.rst,*.ipynb"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
split_on_trailing_comma = true
use_parentheses = true

[tool.pyright]
reportMissingImports = false
reportMissingModuleSource = false
reportUnboundVariable = false
reportUnnecessaryCast = true
reportUnnecessaryTypeIgnoreComment = true
reportUnsupportedDunderAll = false
reportUnusedExpression = false

[tool.pytest.ini_options]
addopts = "-n auto --dist=loadscope --durations=5"

[tool.ruff]
target-version = "py311"
line-length = 88
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "N802", # Function name should be lowercase
    "N803", # Argument name should be lowercase
    "N806", # Variable in function should be lowercase
    "N812", # Lowercase imported as non-lowercase
    "N813", # Camelcase imported as lowercase
    "N815", # Variable in class scope should not be mixedCase
    "N816", # Variable in global scope should not be mixedCase
    "B008", # Do not perform function call in argument defaults
    "E501", # Line too long
    "E402", # Module level import not at top of file
    "F841", # Unused local variable
    "B023", # Function definition does not bind loop variable
    "F401", # Module imported but unused
]
typing-modules = ["colour.hints"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"colour-checker-detection/examples/*" = ["INP", "T201", "T203"]
"docs/*" = ["INP"]
"tasks.py" = ["INP"]
"test_*" = ["S101"]
"utilities/*" = ["EXE001", "INP"]
"utilities/unicode_to_ascii.py" = ["RUF001"]

[tool.ruff.format]
docstring-code-format = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
version_files = [
    "colour_checker_detection/__init__.py:__version__",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true